// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlAlert basic error renders as expected 1`] = `
<body>
  <div>
    <div
      class="round px24 py24 flex bg-red-faint"
    >
      <div
        class="flex-child-no-shrink"
      >
        <svg
          aria-hidden="true"
          class="events-none icon inline-block align-t"
          data-testid="icon-alert"
          focusable="false"
          style="width: 1.3em;"
        >
          <use
            xlink:href="#icon-alert"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          alert
        </span>
      </div>
      <div
        class="flex-child-grow"
      >
        <span
          class="ml6"
        >
          Drats.
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`ControlAlert basic locked renders as expected 1`] = `
<body>
  <div>
    <div
      class="round px24 py24 flex bg-yellow-faint"
    >
      <div
        class="flex-child-no-shrink"
      >
        <svg
          aria-hidden="true"
          class="events-none icon inline-block align-t"
          data-testid="icon-lock"
          focusable="false"
          style="width: 1.3em;"
        >
          <use
            xlink:href="#icon-lock"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          lock
        </span>
      </div>
      <div
        class="flex-child-grow"
      >
        <span
          class="ml6"
        >
          Nope.
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`ControlAlert basic success renders as expected 1`] = `
<body>
  <div>
    <div
      class="round px24 py24 flex bg-green-faint"
    >
      <div
        class="flex-child-no-shrink"
      >
        <svg
          aria-hidden="true"
          class="events-none icon inline-block align-t"
          data-testid="icon-check"
          focusable="false"
          style="width: 1.3em;"
        >
          <use
            xlink:href="#icon-check"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          check
        </span>
      </div>
      <div
        class="flex-child-grow"
      >
        <span
          class="ml6"
        >
          Woohoo!
        </span>
      </div>
    </div>
  </div>
</body>
`;
